# PyTorch_demo

./: .gitignore  README.md  pyproject.toml
pytest/: pyproject.toml
pytest/src/pytest/: __init__.py
src/pytorch_demo/: __init__.py
src/pytorch_demo/data/: mnist.py
tests/: test_mnist.py
