[project]
name = "pytorch-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yutoharako", email = "touyu0915.gt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
pytorch-demo = "pytorch_demo:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
